--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,9 +3,12 @@
 # CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+# CONFIG_ZMK_DISPLAY=y
+# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Sleep
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+# Change board name 
+CONFIG_ZMK_KEYBOARD_NAME="Corne View"
