--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,5 +12,8 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
+# Board name
+CONFIG_ZMK_KEYBOARD_NAME="Zmk corne"
+
 # Change board name 
 # CONFIG_ZMK_KEYBOARD_NAME="Corne View"
